Changed text content

--- a/index.html
+++ b/index.html
@@ -63,8 +63,13 @@
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Bootstrap</li>
+                            <li>Visual Studio Code</li>
                             <li>Git &amp; GitHub</li>
                             <li>Gulp &amp; npm scripts</li>
+                            <li>Photopea</li>
+                            <li>Figma</li>
                         </ul>
                     </section>
 
@@ -110,14 +115,13 @@
 
                         <article class="project">
                             <div class="project__description">
-                                <h3 class="project__name">Project Beta</h3>
+                                <h3 class="project__name">Coffee brewing calculator</h3>
                                 <p>
-                                    The description of the project, what was done by you, what have you learned. What
-                                    were the technologies and methodologies used to create this project.
+                                    Coffee Calculator is a web application that helps you with coffee brewing measurements. It provides a user-friendly interface to input and calculate the quantities of coffee beans, water, and the yield based on user preferences. The application includes a timer feature, allowing users to set their desired brewing time for coffee brewing.
                                 </p>
                                 <p>
-                                    See the <a href="#">website</a> and check the
-                                    <a href="https://github.com/Adiosik">source code on GitHub</a>
+                                    See the <a href="https://adiosik.github.io/coffee-calculator/">website</a> and check the
+                                    <a href="https://github.com/Adiosik/coffee-calculator">source code on GitHub</a>
                                 </p>
                             </div>
                             <div class="project__image-container">
@@ -143,14 +147,13 @@
 
                         <article class="project">
                             <div class="project__description">
-                                <h3 class="project__name">Project Gamma</h3>
+                                <h3 class="project__name">E-shop</h3>
                                 <p>
-                                    The description of the project, what was done by you, what have you learned. What
-                                    were the technologies and methodologies used to create this project.
+                                    Basic e-shop using React and Bootstrap. Users can browse and buy homemade lighting products, demonstrating React's power in web development.
                                 </p>
                                 <p>
                                     See the <a href="#">website</a> and check the
-                                    <a href="https://github.com/Adiosik">source code on GitHub</a>
+                                    <a href="https://github.com/Adiosik/eshop">source code on GitHub</a>
                                 </p>
                             </div>
                             <div class="project__image-container">
@@ -182,7 +185,6 @@
                         <ul>
                             <li>English B1</li>
                             <li>Drivers license</li>
-                            <li>Divers license</li>
                         </ul>
                     </section>
                 </main>
