Changed meta text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Daniel Šimanský, a Czech frontend developer, presents his portfolio highlighting skills in HTML, CSS, JavaScript, Git, and more. Explore projects like Alpha, Beta, and Gamma. Contact for collaboration or connect on LinkedIn/GitHub."
+            content="Daniel Šimanský, a Czech frontend developer, presents his portfolio highlighting skills in HTML, CSS, JavaScript, Git, and more. Explore projects like Portfolio Web Page, Coffee brewing calculator and E-shop. Contact for collaboration or connect on LinkedIn/GitHub."
         />
         <meta name="msapplication-TileColor" content="#1e2929" />
         <meta name="theme-color" content="fddcc3" />
