Changed Technologies text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <small class="overheading">What can I work with</small>Technolo<span
                                 class="hidden-wrap"
                             ></span
-                            >gies
+                            >gies and Tools
                         </h2>
                         <ul>
                             <li>HTML</li>
@@ -65,9 +65,11 @@
                             <li>JavaScript</li>
                             <li>React</li>
                             <li>Bootstrap</li>
+                            <li>Git</li>
+                            <li>GitHub</li>
+                            <li>Gulp npm scripts</li>
+                            <li>Npm scripts</li>
                             <li>Visual Studio Code</li>
-                            <li>Git &amp; GitHub</li>
-                            <li>Gulp &amp; npm scripts</li>
                             <li>Photopea</li>
                             <li>Figma</li>
                         </ul>
