Changed project texts

--- a/index.html
+++ b/index.html
@@ -83,11 +83,8 @@
                                 <h3 class="project__name">Portfolio Web Page</h3>
                                 <p>
                                     This is the current Portfolio Webpage you are viewing. It is a static web page that follows
-                                    the BEM (Block Element Modifier) methodology for a structured and maintainable codebase.
-                                </p>
-                                <p>
-                                    The website is designed with responsiveness in mind, ensuring optimal viewing across different devices. It utilizes
-                                    media queries for a responsive layout and implements image optimization techniques.
+                                    the HTML, CSS and BEM methodology for a structured and maintainable codebase. The site is designed with an emphasis on responsiveness and uses media queries. Image optimization techniques were used to speed up loading times, contributing to a smooth user experience. HTML, CSS, BEM, responsive images, based on the graphic design in 
+                                    <a href="https://www.figma.com/file/VQqCIEggvpL9x58rH0taT7/Daniel-%C5%A0imansk%C3%BD?type=design&node-id=0%3A1&mode=design&t=6OgMujuvhheEgAe1-1">Figma.</a>
                                 </p>
                                 <p>
                                     Check the
@@ -119,7 +116,7 @@
                             <div class="project__description">
                                 <h3 class="project__name">Coffee brewing calculator</h3>
                                 <p>
-                                    Coffee Calculator is a web application that helps you with coffee brewing measurements. It provides a user-friendly interface to input and calculate the quantities of coffee beans, water, and the yield based on user preferences. The application includes a timer feature, allowing users to set their desired brewing time for coffee brewing.
+                                    Web app that makes brewing coffee easier. Includes a calculator to calculate the amount of coffee or water. Also a stopwatch for the actual preparation. Created using JavaScript, HTML, CSS, BEM.
                                 </p>
                                 <p>
                                     See the <a href="https://adiosik.github.io/coffee-calculator/">website</a> and check the
@@ -151,7 +148,7 @@
                             <div class="project__description">
                                 <h3 class="project__name">E-shop</h3>
                                 <p>
-                                    Basic e-shop using React and Bootstrap. Users can browse and buy homemade lighting products, demonstrating React's power in web development.
+                                    Frontend of a fictional e-shop built from scratch in pure React. I'm focusing mainly on functionality and React, appearance only Bootstrap without modifications. E-shop uses DummyJSON API. I'm still gradually adding new features.
                                 </p>
                                 <p>
                                     See the <a href="#">website</a> and check the
