Modified responsive images from images folder

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
                             <div class="project__image-container">
                                 <img
                                     class="project__photo"
-                                    src="https://satyr.dev/1296x972/1"
+                                    src="images/portfolio/pwp-1296w.webp"
                                     srcset="
-                                        https://satyr.dev/280x4:3/1   280w,
-                                        https://satyr.dev/576x4:3/2   576w,
-                                        https://satyr.dev/648x4:3/3   648w,
-                                        https://satyr.dev/1152x4:3/4 1152w,
-                                        https://satyr.dev/1296x4:3/5 1296w
+                                        images/portfolio/pwp-280w.webp   280w,
+                                        images/portfolio/pwp-576w.webp   576w,
+                                        images/portfolio/pwp-648w.webp   648w,
+                                        images/portfolio/pwp-1152w.webp 1152w,
+                                        images/portfolio/pwp-1296w.webp 1296w
                                     "
                                     sizes="
                                 (min-width: 960px) 648px, (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) ,
@@ -126,13 +126,13 @@
                             <div class="project__image-container">
                                 <img
                                     class="project__photo"
-                                    src="https://satyr.dev/1296x972/1"
+                                    src="images/calculator/cc-1296w.webp"
                                     srcset="
-                                        https://satyr.dev/280x4:3/1   280w,
-                                        https://satyr.dev/576x4:3/2   576w,
-                                        https://satyr.dev/648x4:3/3   648w,
-                                        https://satyr.dev/1152x4:3/4 1152w,
-                                        https://satyr.dev/1296x4:3/5 1296w
+                                        images/calculator/cc-280w.webp   280w,
+                                        images/calculator/cc-576w.webp   576w,
+                                        images/calculator/cc-648w.webp   648w,
+                                        images/calculator/cc-1152w.webp 1152w,
+                                        images/calculator/cc-1296w.webp 1296w
                                     "
                                     sizes="
                                 (min-width: 960px) 648px, (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) ,
@@ -158,13 +158,13 @@
                             <div class="project__image-container">
                                 <img
                                     class="project__photo"
-                                    src="https://satyr.dev/1296x972/1"
+                                    src="images/eshop/e-1296w.webp"
                                     srcset="
-                                        https://satyr.dev/280x4:3/1   280w,
-                                        https://satyr.dev/576x4:3/2   576w,
-                                        https://satyr.dev/648x4:3/3   648w,
-                                        https://satyr.dev/1152x4:3/4 1152w,
-                                        https://satyr.dev/1296x4:3/5 1296w
+                                        images/eshop/e-280w.webp   280w,
+                                        images/eshop/e-576w.webp   576w,
+                                        images/eshop/e-648w.webp   648w,
+                                        images/eshop/e-1152w.webp 1152w,
+                                        images/eshop/e-1296w.webp 1296w
                                     "
                                     sizes="
                                 (min-width: 960px) 648px, 
