Added new header text

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                         </h1>
                         <div class="header__text">
                             <p>
-                                I’m Dan a front end developer based in Czechia. These are the words that tell you basic
-                                stuff about me. Not much details but also a bit of my personality shows here.
+                                I'm Dan, a junior frontend developer excited to dive into the world of web development. I'm skilled in HTML, CSS, JavaScript, React, along with other technologies related to web development. I'm eager to learn and grow with each project. Let's work together and build something awesome!
                             </p>
                         </div>
                     </div>
