Added new contact picture

--- a/index.html
+++ b/index.html
@@ -193,8 +193,11 @@
                         <div class="contacts">
                             <img
                                 class="contacts__photo"
-                                src="https://satyr.dev/384"
-                                srcset="https://satyr.dev/192/10 192w, https://satyr.dev/384/11 384w"
+                                src="images/contact/contact-348w.webp"
+                                srcset="
+                                    images/contact/contact-192w.webp, 
+                                    images/contact/contact-348w.webp
+                                "
                                 sizes="192px"
                                 loading="lazy"
                                 width="192"
