New size of contact picture

--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                         <div class="contacts">
                             <img
                                 class="contacts__photo"
-                                src="images/contact/contact-348w.webp"
+                                src="images/contact/contact-384w.webp"
                                 srcset="
-                                    images/contact/contact-192w.webp, 
-                                    images/contact/contact-348w.webp
+                                    images/contact/contact-192w.webp 192w, 
+                                    images/contact/contact-384w.webp 384w
                                 "
                                 sizes="192px"
                                 loading="lazy"
