--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
                         </h1>
                         <div class="header__text">
                             <p>
-                                I'm Dan, a junior frontend developer excited to dive into the world of web development. I'm skilled in HTML, CSS, JavaScript, React, along with other technologies related to web development. I'm eager to learn and grow with each project. Let's work together and build something awesome!
+                                I'm Dan, a junior frontend developer excited to dive into the world of web development.
+                                I'm skilled in HTML, CSS, JavaScript, React, along with other technologies related to
+                                web development. I'm eager to learn and grow with each project. Let's work together and
+                                build something awesome!
                             </p>
                         </div>
                     </div>
@@ -81,9 +84,16 @@
                             <div class="project__description">
                                 <h3 class="project__name">Portfolio Web Page</h3>
                                 <p>
-                                    This is the current Portfolio Webpage you are viewing. It is a static web page that follows
-                                    the HTML, CSS and BEM methodology for a structured and maintainable codebase. The site is designed with an emphasis on responsiveness and uses media queries. Image optimization techniques were used to speed up loading times, contributing to a smooth user experience. HTML, CSS, BEM, responsive images, based on the graphic design in 
-                                    <a href="https://www.figma.com/file/VQqCIEggvpL9x58rH0taT7/Daniel-%C5%A0imansk%C3%BD?type=design&node-id=0%3A1&mode=design&t=6OgMujuvhheEgAe1-1">Figma.</a>
+                                    This is the current Portfolio Webpage you are viewing. It is a static web page that
+                                    follows the HTML, CSS and BEM methodology for a structured and maintainable
+                                    codebase. The site is designed with an emphasis on responsiveness and uses media
+                                    queries. Image optimization techniques were used to speed up loading times,
+                                    contributing to a smooth user experience. HTML, CSS, BEM, responsive images, based
+                                    on the graphic design in
+                                    <a
+                                        href="https://www.figma.com/file/VQqCIEggvpL9x58rH0taT7/Daniel-%C5%A0imansk%C3%BD?type=design&node-id=0%3A1&mode=design&t=6OgMujuvhheEgAe1-1"
+                                        >Figma.</a
+                                    >
                                 </p>
                                 <p>
                                     Check the
@@ -115,10 +125,13 @@
                             <div class="project__description">
                                 <h3 class="project__name">Coffee brewing calculator</h3>
                                 <p>
-                                    Web app that makes brewing coffee easier. Includes a calculator to calculate the amount of coffee or water. Also a stopwatch for the actual preparation. Created using JavaScript, HTML, CSS, BEM.
+                                    Web app that makes brewing coffee easier. Includes a calculator to calculate the
+                                    amount of coffee or water. Also a stopwatch for the actual preparation. Created
+                                    using JavaScript, HTML, CSS, BEM.
                                 </p>
                                 <p>
-                                    See the <a href="https://adiosik.github.io/coffee-calculator/">website</a> and check the
+                                    See the <a href="https://adiosik.github.io/coffee-calculator/">website</a> and check
+                                    the
                                     <a href="https://github.com/Adiosik/coffee-calculator">source code on GitHub</a>
                                 </p>
                             </div>
@@ -147,7 +160,9 @@
                             <div class="project__description">
                                 <h3 class="project__name">E-shop</h3>
                                 <p>
-                                    Frontend of a fictional e-shop built from scratch in pure React. I'm focusing mainly on functionality and React, appearance only Bootstrap without modifications. E-shop uses DummyJSON API. I'm still gradually adding new features.
+                                    Frontend of a fictional e-shop built from scratch in pure React. I'm focusing mainly
+                                    on functionality and React, appearance only Bootstrap without modifications. E-shop
+                                    uses DummyJSON API. I'm still gradually adding new features.
                                 </p>
                                 <p>
                                     See the <a href="#">website</a> and check the
@@ -194,10 +209,7 @@
                             <img
                                 class="contacts__photo"
                                 src="images/contact/contact-384w.webp"
-                                srcset="
-                                    images/contact/contact-192w.webp 192w, 
-                                    images/contact/contact-384w.webp 384w
-                                "
+                                srcset="images/contact/contact-192w.webp 192w, images/contact/contact-384w.webp 384w"
                                 sizes="192px"
                                 loading="lazy"
                                 width="192"
