Added e-shop link

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                     uses DummyJSON API. I'm still gradually adding new features.
                                 </p>
                                 <p>
-                                    See the <a href="#">website</a> and check the
+                                    See the <a href="https://adiosik.github.io/eshop/">website</a> and check the
                                     <a href="https://github.com/Adiosik/eshop">source code on GitHub</a>
                                 </p>
                             </div>
