Added links to images of projects

--- a/index.html
+++ b/index.html
@@ -101,23 +101,25 @@
                                 </p>
                             </div>
                             <div class="project__image-container">
-                                <img
-                                    class="project__photo"
-                                    src="images/portfolio/pwp-1296w.webp"
-                                    srcset="
-                                        images/portfolio/pwp-280w.webp   280w,
-                                        images/portfolio/pwp-576w.webp   576w,
-                                        images/portfolio/pwp-648w.webp   648w,
-                                        images/portfolio/pwp-1152w.webp 1152w,
-                                        images/portfolio/pwp-1296w.webp 1296w
-                                    "
-                                    sizes="
-                                (min-width: 960px) 648px, (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) ,
-                                (min-width: 640px) 576px, calc(100vw - 2 * 2rem)"
-                                    width="1296"
-                                    height="972"
-                                    alt=""
-                                />
+                                <a href="#">
+                                    <img
+                                        class="project__photo"
+                                        src="images/portfolio/pwp-1296w.webp"
+                                        srcset="
+                                            images/portfolio/pwp-280w.webp   280w,
+                                            images/portfolio/pwp-576w.webp   576w,
+                                            images/portfolio/pwp-648w.webp   648w,
+                                            images/portfolio/pwp-1152w.webp 1152w,
+                                            images/portfolio/pwp-1296w.webp 1296w
+                                        "
+                                        sizes="
+                                    (min-width: 960px) 648px, (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) ,
+                                    (min-width: 640px) 576px, calc(100vw - 2 * 2rem)"
+                                        width="1296"
+                                        height="972"
+                                        alt=""
+                                    />
+                                </a>
                             </div>
                         </article>
 
@@ -136,23 +138,25 @@
                                 </p>
                             </div>
                             <div class="project__image-container">
-                                <img
-                                    class="project__photo"
-                                    src="images/calculator/cc-1296w.webp"
-                                    srcset="
-                                        images/calculator/cc-280w.webp   280w,
-                                        images/calculator/cc-576w.webp   576w,
-                                        images/calculator/cc-648w.webp   648w,
-                                        images/calculator/cc-1152w.webp 1152w,
-                                        images/calculator/cc-1296w.webp 1296w
-                                    "
-                                    sizes="
-                                (min-width: 960px) 648px, (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) ,
-                                (min-width: 640px) 576px, calc(100vw - 2 * 2rem)"
-                                    width="1296"
-                                    height="972"
-                                    alt=""
-                                />
+                                <a href="https://adiosik.github.io/coffee-calculator/">
+                                    <img
+                                        class="project__photo"
+                                        src="images/calculator/cc-1296w.webp"
+                                        srcset="
+                                            images/calculator/cc-280w.webp   280w,
+                                            images/calculator/cc-576w.webp   576w,
+                                            images/calculator/cc-648w.webp   648w,
+                                            images/calculator/cc-1152w.webp 1152w,
+                                            images/calculator/cc-1296w.webp 1296w
+                                        "
+                                        sizes="
+                                    (min-width: 960px) 648px, (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) ,
+                                    (min-width: 640px) 576px, calc(100vw - 2 * 2rem)"
+                                        width="1296"
+                                        height="972"
+                                        alt=""
+                                    />
+                                </a>
                             </div>
                         </article>
 
@@ -170,25 +174,27 @@
                                 </p>
                             </div>
                             <div class="project__image-container">
-                                <img
-                                    class="project__photo"
-                                    src="images/eshop/e-1296w.webp"
-                                    srcset="
-                                        images/eshop/e-280w.webp   280w,
-                                        images/eshop/e-576w.webp   576w,
-                                        images/eshop/e-648w.webp   648w,
-                                        images/eshop/e-1152w.webp 1152w,
-                                        images/eshop/e-1296w.webp 1296w
-                                    "
-                                    sizes="
-                                (min-width: 960px) 648px, 
-                                (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609), 
-                                (min-width: 640px) 576px, 
-                                calc(100vw - 2 * 2rem)"
-                                    width="1296"
-                                    height="972"
-                                    alt=""
-                                />
+                                <a href="https://adiosik.github.io/eshop/">
+                                    <img
+                                        class="project__photo"
+                                        src="images/eshop/e-1296w.webp"
+                                        srcset="
+                                            images/eshop/e-280w.webp   280w,
+                                            images/eshop/e-576w.webp   576w,
+                                            images/eshop/e-648w.webp   648w,
+                                            images/eshop/e-1152w.webp 1152w,
+                                            images/eshop/e-1296w.webp 1296w
+                                        "
+                                        sizes="
+                                    (min-width: 960px) 648px, 
+                                    (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609), 
+                                    (min-width: 640px) 576px, 
+                                    calc(100vw - 2 * 2rem)"
+                                        width="1296"
+                                        height="972"
+                                        alt=""
+                                    />
+                                </a>
                             </div>
                         </article>
                     </section>
