--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                 ><br />give me a call at
                                 <a href="tel:+420723246778"><span>723 246 778</span></a>
                                 <br />
-                                <a href="https://www.linkedin.com/in/daniel-%C5%A1imansk%C3%BD-44579b261/">LinkedIn</a>
+                                <a href="https://www.linkedin.com/in/d-simansky/">LinkedIn</a>
                                 <br />
                                 <a href="https://github.com/Adiosik">GitHub</a>
                             </p>
